# board-platformer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.org
cmake/: FindFontConfig.cmake  FindGRPC.cmake
example/: CMakeLists.txt
example/tic-tac-toe/: CMakeLists.txt  game_policy.hpp  main.cpp  tic_tac_toe  ui_policy.hpp
include/: custom_settings.hpp  custom_settings1.hpp  custom_settings2.hpp
include/board_platformer/: exceptions.hpp  filesystem.hpp  game.hpp  game_base.hpp  game_board.hpp  game_board.ipp  game_board.tpp  game_manager.hpp  game_manager.tpp  game_policy.hpp  game_status.hpp  messages.hpp  player_process_data.hpp  player_process_data.ipp  player_process_data.tpp  types.hpp  ui_event.hpp  ui_policy.hpp
include/board_platformer/detail/: filesystem.hpp  game_base.hpp  game_board.hpp  game_board.tpp  game_status.hpp  logger.hpp  player.hpp  rpc.hpp  rpc_message.grpc.pb.h  rpc_message.pb.h  strong_type.hpp  type_traits.hpp
src/: CMakeLists.txt  exceptions.cpp  form.cpp  form.hpp  game.cpp  game.hpp  game.tpp  logger.cpp  logger.hpp  main.cpp  move_history.hpp  player.cpp  player.hpp  process_comm.cpp  process_comm.hpp  rpc_message.grpc.pb.cc  rpc_message.pb.cc  server.cpp  server.hpp
src/logger/: logger.cpp  logger.hpp  main.cpp
src/protobuf/: rpc_message.proto
